@@ -61,5 +61,7 @@
 	- renamed built css file (now tnt.board.css)
 	- api: "move_right" / "move_left" renamed "scroll"
 	- api: "reorder" removed, "tracks" now reorders and create tracks
+	- api: Track ids are not settable (and "find_track" method added to board)
+
 
 
